--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "docker:logs": "docker-compose logs -f"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
@@ -39,6 +40,7 @@
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/throttler": "^6.2.1",
     "@prisma/client": "^5.20.0",
+    "axios-retry": "^4.5.0",
     "bcryptjs": "^2.4.3",
     "cache-manager": "^5.7.6",
     "cache-manager-redis-store": "^3.0.1",
@@ -46,9 +48,11 @@
     "class-validator": "^0.14.1",
     "mongoose": "^8.7.3",
     "nest-winston": "^1.9.7",
+    "openai": "^5.8.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pocketbase": "^0.26.1",
     "prisma": "^5.20.0",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.0",
